--- a/helm-values/chart-template/templates/serviceaccount.yaml
+++ b/helm-values/chart-template/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "cipms.serviceAccountName" . }}
+  name: {{ include "ciaws.serviceAccountName" . }}
   labels:
-    {{- include "cipms.labels" . | nindent 4 }}
+    {{- include "ciaws.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
