--- a/helm-values/chart-template/templates/deployment.yaml
+++ b/helm-values/chart-template/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "cipms.fullname" . }}
+  name: {{ include "ciaws.fullname" . }}
   labels:
-    {{- include "cipms.labels" . | nindent 4 }}
+    {{- include "ciaws.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "cipms.selectorLabels" . | nindent 6 }}
+      {{- include "ciaws.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,8 +18,8 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "cipms.selectorLabels" . | nindent 8 }}
-        app.kubernetes.io/component: {{ include "cipms.name" . }}
+        {{- include "ciaws.selectorLabels" . | nindent 8 }}
+        app.kubernetes.io/component: {{ include "ciaws.name" . }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -29,7 +29,7 @@ spec:
       hostAliases:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "cipms.serviceAccountName" . }}
+      serviceAccountName: {{ include "ciaws.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -49,7 +49,7 @@ spec:
           {{- if and .Values.envSecrets }}
           envFrom:
             - secretRef:
-                name: {{ include "cipms.fullname" . }}-env
+                name: {{ include "ciaws.fullname" . }}-env
           {{- end }}
           ports:
             - name: http
