--- a/helm-values/chart-template/templates/secrets.yaml
+++ b/helm-values/chart-template/templates/secrets.yaml
@@ -3,9 +3,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "cipms.fullname" . }}-env
+  name: {{ include "ciaws.fullname" . }}-env
   labels:
-    {{- include "cipms.labels" . | nindent 4 }}
+    {{- include "ciaws.labels" . | nindent 4 }}
 type: Opaque
 data: 
   {{- range $key, $value := .Values.envSecrets }}
