--- a/helm-values/chart-template/templates/service.yaml
+++ b/helm-values/chart-template/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cipms.fullname" . }}
+  name: {{ include "ciaws.fullname" . }}
   labels:
-    {{- include "cipms.labels" . | nindent 4 }}
-    app.kubernetes.io/component: {{ include "cipms.name" . }}
+    {{- include "ciaws.labels" . | nindent 4 }}
+    app.kubernetes.io/component: {{ include "ciaws.name" . }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "cipms.selectorLabels" . | nindent 4 }}
+    {{- include "ciaws.selectorLabels" . | nindent 4 }}
