--- a/helm-values/chart-template/templates/tests/test-connection.yaml
+++ b/helm-values/chart-template/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "cipms.fullname" . }}-test-connection"
+  name: "{{ include "ciaws.fullname" . }}-test-connection"
   labels:
-    {{- include "cipms.labels" . | nindent 4 }}
+    {{- include "ciaws.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "cipms.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "ciaws.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
