--- a/helm-values/chart-template/values.yaml
+++ b/helm-values/chart-template/values.yaml
@@ -1,4 +1,4 @@
-# Default values for cipms.
+# Default values for ciaws.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
