--- a/helm-values/chart-template/templates/cronjob.yaml
+++ b/helm-values/chart-template/templates/cronjob.yaml
@@ -4,15 +4,15 @@
 
 {{- range $job := .Values.jobs }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: "{{ $release_name }}-{{ $job.name }}"
   labels:
     chart: "{{ $chart_name }}-{{ $chart_version }}"
 spec:
-  concurrencyPolicy: {{ $job.concurrencyPolicy }}
-  failedJobsHistoryLimit: {{ $job.failedJobsHistoryLimit }}
+  concurrencyPolicy: {{ $job.concurrencyPolicy | default "Replace" }}
+  failedJobsHistoryLimit: {{ $job.failedJobsHistoryLimit | default "1" }}
   jobTemplate:
     spec:
       template:
@@ -34,9 +34,14 @@ spec:
           {{- end }}
         {{- end }}
           containers:
-          - image: "{{ $job.image.repository }}:{{ $job.image.tag }}"
-            imagePullPolicy: {{ $job.image.imagePullPolicy }}
-            name: {{ $job.name }}
+          - name: {{ $job.name }}
+            {{- if $job.image }}
+            image: "{{ $job.image.repository | default "curlimages/curl" }}:{{ $job.image.tag | default "latest" }}"
+            imagePullPolicy: {{ $job.image.imagePullPolicy | default "IfNotPresent" }}
+            {{- else }}
+            image: "curlimages/curl:latest"
+            imagePullPolicy: "IfNotPresent"
+            {{- end }}
             {{- with $job.env }}
             env:
 {{ toYaml . | indent 12 }}
@@ -68,11 +73,11 @@ spec:
           tolerations:
 {{ toYaml . | indent 12 }}
           {{- end }}
-          restartPolicy: {{ $job.restartPolicy }}
+          restartPolicy: {{ $job.restartPolicy | default "OnFailure" }}
           {{- with $job.volumes }}
           volumes:
 {{ toYaml . | indent 12 }}
           {{- end }}
   schedule: {{ $job.schedule | quote }}
-  successfulJobsHistoryLimit: {{ $job.successfulJobsHistoryLimit }}
+  successfulJobsHistoryLimit: {{ $job.successfulJobsHistoryLimit | default "1"}}
 {{- end }}
