--- a/helm-values/chart-template/templates/service.yaml
+++ b/helm-values/chart-template/templates/service.yaml
@@ -1,10 +1,10 @@
+{{- if .Values.service.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "ciaws.fullname" . }}
   labels:
     {{- include "ciaws.labels" . | nindent 4 }}
-    app.kubernetes.io/component: {{ include "ciaws.name" . }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -14,3 +14,4 @@ spec:
       name: http
   selector:
     {{- include "ciaws.selectorLabels" . | nindent 4 }}
+{{- end }}
