--- a/helm-values/chart-template/values.yaml
+++ b/helm-values/chart-template/values.yaml
@@ -2,24 +2,30 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 3
+replicaCount: 1
 
 image:
-  repository: nginx
+  repository: ubuntu
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-imagePullSecrets: []
+# Secret for pull image
+imagePullSecrets:
+  - name: vsmreg
+
 nameOverride: ""
 fullnameOverride: ""
 
-migrateDB:
-  enabled: false
-  annotations:
-    "helm.sh/hook": pre-install
-  command: ["/bin/sh", "-c"]
-  args: ["echo 1"]
+# Secret for deployment
+# envSecrets: {}
+
+# Set Host
+# hostAliases: {}
+#  - ip: "172.22.104.93"
+#    hostnames:
+#      - "ocp2-mongodb01-vp"
+
 ## Additional environment variables to set
 ## E.g:
 ## extraEnvVars:
@@ -28,15 +34,9 @@ migrateDB:
 ##
 extraEnvVars: []
 
-envSecrets:
-
-## https://kubernetes.io/docs/concepts/services-networking/add-entries-to-pod-etc-hosts-with-host-aliases/
-##
-hostAliases: []
-
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
@@ -57,11 +57,13 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
+  enabled: false
   type: ClusterIP
   port: 80
 
 ingress:
   enabled: false
+  #ingressClassName: nginx
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
@@ -87,17 +89,33 @@ resources: {}
 
 autoscaling:
   enabled: false
-  minReplicas: 2
+  minReplicas: 1
   maxReplicas: 5
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  targetCPUUtilizationPercentage: 60
+  # targetMemoryUtilizationPercentage: 60
+  behavior: {} # available only on Kubernetes ≥1.23 [required "autoscaling/v2"]
+#    scaleDown:
+#      stabilizationWindowSeconds: 300
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#    scaleUp:
+#      stabilizationWindowSeconds: 0
+#      policies:
+#      - type: Percent
+#        value: 100
+#        periodSeconds: 15
+#      - type: Pods
+#        value: 2
+#        periodSeconds: 15
+#      selectPolicy: Max
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
-
 
 #startupProbe:
 #  exec:
@@ -113,7 +131,7 @@ affinity: {}
 #  httpGet:
 #    path: /actuator/health/liveness
 #    port: http
-#  initialDelaySeconds: 30
+#  initialDelaySeconds: 60
 #  periodSeconds: 10
 #  timeoutSeconds: 5
 #  successThreshold: 1
@@ -122,12 +140,41 @@ affinity: {}
 #  httpGet:
 #    path: /actuator/health/readiness
 #    port: http
-#  initialDelaySeconds: 30
+#  initialDelaySeconds: 60
 #  periodSeconds: 10
 #  timeoutSeconds: 5
 #  successThreshold: 1
 #  failureThreshold: 3
 
+persistence:
+  enabled: false
+  accessMode: ReadWriteOnce
+  ## Persistent Volume Storage Class
+  ## If defined, storageClassName: <storageClass>
+  ## If set to "-", storageClassName: "", which disables dynamic provisioning
+  ## If undefined (the default) or set to null, no storageClassName spec is
+  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+  ##   GKE, AWS & OpenStack)
+  ##
+  # storageClass: "-"
+  size: 10Gi
+  annotations:
+    "helm.sh/hook": pre-install,post-delete
+    "helm.sh/hook-weight": "0"
+    "helm.sh/resource-policy": keep
+  volume:
+    name: data
+    mountPath: /data
+  ## Specify an existing volume claim instead of creating a new one.
+  ## When using this option all following options like storageClass, accessMode and size are ignored.
+  existingClaim: ""
+
+#Custom parameter
+container:
+  enabled: false
+  command: apt update
+
+secretMounts: []
 
 ## Prometheus Exporter / Metrics
 ##
