--- a/helm-values/chart-template/values.yaml
+++ b/helm-values/chart-template/values.yaml
@@ -185,23 +185,23 @@ metrics:
   ## ref: https://github.com/coreos/prometheus-operator
   ##      https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md
   ##
-  serviceMonitor:
+  # serviceMonitor: Disable
     ## If the operator is installed in your cluster, set to true to create a Service Monitor Entry
     ##
-    enabled: false
+    # enabled: false Disable
 
     ## Specify the namespace where Prometheus Operator is running
     ##
     #namespace: monitoring
 
-    path: /actuator/prometheus
+    # path: /actuator/prometheus Disable
     ## Specify the interval at which metrics should be scraped
     ##
-    interval: 30s
+    # interval: 30sDisable
     ## Specify the timeout after which the scrape is ended
     ##
     # scrapeTimeout: 30s
     ## Used to pass Labels that are used by the Prometheus installed in your cluster to select Service Monitors to work with
     ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#prometheusspec
     ##
-    additionalLabels: {}
+    # additionalLabels: {}Disable
