--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -73,8 +73,8 @@ readinessProbe:
   periodSeconds: 10
   timeoutSeconds: 5
 
-metrics:
-  enabled: true
-  serviceMonitor:
-    enabled: true
-    path: /api/aws-zero-downtime/v0/actuator/prometheus
+# metrics:
+#   enabled: true
+#   serviceMonitor:
+#     enabled: true
+#     path: /api/aws-zero-downtime/v0/actuator/prometheus
