--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -15,7 +15,7 @@ envSecrets:
   MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: "health,info,prometheus"
   MANAGEMENT_METRICS_TAGS_APPLICATION: "aws-zero-downtime"
   ### End Springboot Properties ###
-  POSTGRES_DB_URL: "postgresql://aurora-postgresql-cluster.cluster-ro-cfoke28w2qup.us-east-1.rds.amazonaws.com:5432/test"
+  POSTGRES_DB_URL: "jdbc:postgresql://aurora-postgresql-cluster.cluster-ro-cfoke28w2qup.us-east-1.rds.amazonaws.com:5432/test"
   POSTGRES_DB_USERNAME: "test"
   POSTGRES_DB_PASSWORD: "sadalkdakl232"
   AWS_REGION: "us-east-1"
