--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -24,8 +24,8 @@ envSecrets:
   AWS_S3_BUCKET_UPLOOAD: "eks-project-bucket-data"
   AWS_SQS_QUEUE_NAME: "sqs_queue"
   AWS_SQS_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/846338211683/sqs_queue"
-  AWS_ELASTIC_REDIS_HOST: "redis-cluster.0szwfp.ng.0001.use1.cache.amazonaws.com"
-  AWS_ELASTIC_REDIS_PORT: "6379"
+  REDIS_HOST: "redis-cluster.0szwfp.ng.0001.use1.cache.amazonaws.com"
+  REDIS_PORT: "6379"
   ENV: "dev"
   SERVER_PORT: "80"
   SERVICE_NAME: "aws-zero-downtime"
