--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -60,14 +60,14 @@ ingress:
           pathType: Prefix
 livenessProbe:
   httpGet:
-    path: /api/aws-zero-downtime/v0/swagger-ui.html
+    path: /api/aws-zero-downtime/v0/actuator/health/liveness
     port: http
   initialDelaySeconds: 60
   periodSeconds: 10
   timeoutSeconds: 5
 readinessProbe:
   httpGet:
-    path: /api/aws-zero-downtime/v0/swagger-ui.html
+    path: /api/aws-zero-downtime/v0/actuator/health/readiness
     port: http
   initialDelaySeconds: 60
   periodSeconds: 10
