--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -15,14 +15,15 @@ envSecrets:
   MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: "health,info,prometheus"
   MANAGEMENT_METRICS_TAGS_APPLICATION: "aws-zero-downtime"
   ### End Springboot Properties ###
-  POSTGRES_DB_URL: "jdbc:postgresql://aurora-postgresql-cluster.cluster-ro-cfoke28w2qup.us-east-1.rds.amazonaws.com:5432/test"
-  POSTGRES_DB_USERNAME: "test"
-  POSTGRES_DB_PASSWORD: "sadalkdakl232"
+  POSTGRES_DB_URL: "jdbc:postgresql://aurora-postgresql-cluster.cluster-cfoke28w2qup.us-east-1.rds.amazonaws.com/SpringbootEcommerceDb"
+  POSTGRES_DB_USERNAME: "postgres"
+  POSTGRES_DB_PASSWORD: "123456"
   AWS_REGION: "us-east-1"
   AWS_ACCESS_KEY: "AKIA4KDNQH5R44ATPYUW" 
   AWS_SECRET_KEY: "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"
   AWS_S3_BUCKET_UPLOOAD: "eks-project-bucket-data"
   AWS_SQS_QUEUE_NAME: "sqs_queue"
+  #redis-cluster.0szwfp.ng.0001.use1.cache.amazonaws.com:6379
   AWS_SQS_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/846338211683/sqs_queue"
   REDIS_HOST: "redis-cluster.0szwfp.ng.0001.use1.cache.amazonaws.com"
   REDIS_PORT: "6379"
