--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -44,7 +44,12 @@ envSecrets:
   CORS_CREDENTIALS: "false"
 
 hostAliases:
-  
+
+service:
+  enabled: true
+  type: ClusterIP
+  port: 80
+
 
 resources:
   requests:
