--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -61,7 +61,7 @@ ingress:
   enabled: true
   annotations: {}
   hosts:
-    - host: learningaws.com
+    - host: d3thkkrjaegab5.cloudfront.net
       paths:
         - path: /api/aws-zero-downtime/v0
           pathType: Prefix
