--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -57,9 +57,17 @@ resources:
     cpu: 100m
     memory: 512Mi
 
+#ingress:
+#  enabled: true
+#  annotations: {}
+#  hosts:
+#    - host: d3thkkrjaegab5.cloudfront.net
+#      paths:
+#        - path: /api/aws-zero-downtime/v0
+#          pathType: Prefix
+#
 ingress:
   enabled: true
-  annotations: {}
   hosts:
     - host: d3thkkrjaegab5.cloudfront.net
       paths:
