--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -68,6 +68,8 @@ resources:
 #
 ingress:
   enabled: true
+  annotations:
+    kubernetes.io/ingress.class: local
   hosts:
     - host: awsdaotq.net
       paths:
