heealthy check wrong

--- a/helm-values/project-values/aws-zero-down-time/values-dev.yaml
+++ b/helm-values/project-values/aws-zero-down-time/values-dev.yaml
@@ -73,7 +73,7 @@ ingress:
   hosts:
     - host: eks.bootcamp.net
       paths:
-        - path: /app
+        - path: /
           pathType: Prefix
 livenessProbe:
   httpGet:
